# rag-chatbot

./: README.md  pyproject.toml  requirements.txt
app/backend/: config.py  exceptions.py  main.py
app/backend/api/: routes.py
app/backend/models/: chat.py  ingestion.py  status.py
app/backend/services/: embeddings.py  extraction.py  generation.py  lifecycle.py  pipeline.py  session_store.py  storage.py  vector_store.py
app/common/: chunking.py  logging.py
app/frontend/: app.py
docs/: RAG Chatbot Debug Pipeline.postman_collection.json  RAG_Chatbot_SRS_rev3.md  debug-collection.json
tests/: conftest.py  test_quality_assurance.py
